--- a/app/src/main/res/layout/activity_detail_message.xml
+++ b/app/src/main/res/layout/activity_detail_message.xml
@@ -321,7 +321,7 @@
                     android:layout_marginTop="32dp"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/layout_btn_cancel_pesanan"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/table_layout_barang_pesanan"
                     app:neomorph_background_color="@color/neomorph_background_color"
                     app:neomorph_corner_radius="25dp"
@@ -338,7 +338,7 @@
                         android:layout_height="55dp"
                         android:layout_gravity="center"
                         android:background="@drawable/bg_button_rounded_white"
-                        android:text="@string/btn_confirm_message"
+                        android:text="@string/btn_check_message"
                         android:textAllCaps="false"
                         android:textColor="@color/colorGreen"
                         android:textSize="14sp"
