--- a/app/src/main/res/layout/item_handover_list_purchased_item.xml
+++ b/app/src/main/res/layout/item_handover_list_purchased_item.xml
@@ -124,50 +124,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="invisible"
-                    android:fontFamily="@font/montserrat_regular"
-                    tools:text="ACCEPTED"
+                    android:fontFamily="@font/montserrat_bold"
+                    tools:text="@string/tv_accepted"
                     android:textColor="@color/colorGreen"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_title_status_purchased_order" />
 
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout_count_operation_purchased_order"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:id="@+id/tv_title_operation_purchased_order"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="invisible"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/tv_title_operation"
-                    android:textColor="@color/colorGrey"
-                    android:textSize="12sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <Chronometer
-                    android:id="@+id/tv_stopwatch_purchased_order"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="invisible"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:text="@string/tv_countdown"
-                    android:textColor="@color/colorGreen"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_title_operation_purchased_order" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
