--- a/app/src/main/res/drawable/bg_button_green.xml
+++ b/app/src/main/res/drawable/bg_button_green.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/colorGreen"></solid>
-            <corners android:radius="16dp"></corners>
+            <solid android:color="@color/colorGreen"/>
+            <corners android:radius="16dp"/>
         </shape>
     </item>
 </selector>
