--- a/app/src/main/res/layout/fragment_booking_2.xml
+++ b/app/src/main/res/layout/fragment_booking_2.xml
@@ -8,274 +8,131 @@
     android:background="@color/neomorph_background_color"
     tools:context=".Fragment.Booking2Fragment">
 
-    <TextView
-        android:id="@+id/tv_operation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/operation"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_start_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/start"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_operation" />
-
-    <TextView
-        android:id="@+id/tv_end_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/end"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_start_date"
-        app:layout_constraintTop_toBottomOf="@+id/tv_operation" />
-
-    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/neomorphStartDate"
+    <LinearLayout
+        android:id="@+id/container_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/neomorphEndDate"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_start_date"
-        app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="25dp"
-        app:neomorph_elevation="6dp"
-        app:neomorph_highlight_color="@color/neomorph_highlight_color"
-        app:neomorph_shadow_color="@color/neomorph_shadow_color"
-        app:neomorph_shadow_type="outer"
-        app:neomorph_view_type="rectangular">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/edt_start_date"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:background="@drawable/container_edit_text"
-            android:hint="@string/startdate"
-            android:inputType="date"
-            android:paddingStart="15dp"
-            android:paddingEnd="10dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:textColor="@color/colorDarkGrey"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/show_start_calendar_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/todo"
-            android:onClick="ShowCalendar"
-            android:padding="5dp"
-            android:src="@drawable/ic_calendar"
-            tools:ignore="OnClick" />
-
-    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
-
-    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/neomorphEndDate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/neomorphStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/tv_end_date"
-        app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="25dp"
-        app:neomorph_elevation="6dp"
-        app:neomorph_highlight_color="@color/neomorph_highlight_color"
-        app:neomorph_shadow_color="@color/neomorph_shadow_color"
-        app:neomorph_shadow_type="outer"
-        app:neomorph_view_type="rectangular">
-
-        <EditText
-            android:id="@+id/edt_end_date"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:background="@drawable/container_edit_text"
-            android:hint="@string/enddate"
-            android:inputType="date"
-            android:paddingStart="15dp"
-            android:paddingEnd="10dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:textColor="@color/colorDarkGrey"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/show_end_calendar_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/todo"
-            android:onClick="ShowCalendar"
-            android:padding="5dp"
-            android:src="@drawable/ic_calendar"
-            tools:ignore="OnClick" />
-
-    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
-
-    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/neomorphStartTime"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/neomorphEndTime"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/neomorphStartDate"
-        app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="25dp"
-        app:neomorph_elevation="6dp"
-        app:neomorph_highlight_color="@color/neomorph_highlight_color"
-        app:neomorph_shadow_color="@color/neomorph_shadow_color"
-        app:neomorph_shadow_type="outer"
-        app:neomorph_view_type="rectangular">
-
-        <EditText
-            android:id="@+id/edt_start_time"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:background="@drawable/container_edit_text"
-            android:hint="@string/starttime"
-            android:inputType="date"
-            android:paddingStart="15dp"
-            android:paddingEnd="10dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:textColor="@color/colorDarkGrey"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/show_start_time_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/todo"
-            android:onClick="ShowTime"
-            android:padding="5dp"
-            android:src="@drawable/ic_timer"
-            tools:ignore="OnClick" />
-
-    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
-
-    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/neomorphEndTime"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/neomorphStartTime"
-        app:layout_constraintTop_toBottomOf="@+id/neomorphEndDate"
-        app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="25dp"
-        app:neomorph_elevation="6dp"
-        app:neomorph_highlight_color="@color/neomorph_highlight_color"
-        app:neomorph_shadow_color="@color/neomorph_shadow_color"
-        app:neomorph_shadow_type="outer"
-        app:neomorph_view_type="rectangular">
-
-        <EditText
-            android:id="@+id/edt_end_time"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:background="@drawable/container_edit_text"
-            android:hint="@string/endtime"
-            android:inputType="date"
-            android:paddingStart="15dp"
-            android:paddingEnd="10dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:textColor="@color/colorDarkGrey"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/show_end_time_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/todo"
-            android:onClick="ShowTime"
-            android:padding="5dp"
-            android:src="@drawable/ic_timer"
-            tools:ignore="OnClick" />
-
-    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
-
-    <TextView
-        android:id="@+id/tv_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/item"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/neomorphStartTime" />
-
-    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/neomorphFrameLayout3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.999"
-        app:layout_constraintStart_toEndOf="@+id/tv_item"
-        app:layout_constraintTop_toBottomOf="@+id/neomorphEndTime"
-        app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="15dp"
-        app:neomorph_elevation="6dp"
-        app:neomorph_highlight_color="@color/neomorph_highlight_color"
-        app:neomorph_shadow_color="@color/neomorph_shadow_color"
-        app:neomorph_shadow_type="outer"
-        app:neomorph_view_type="rectangular">
-
-        <Button
-            android:id="@+id/btn_add_item"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:background="@drawable/container_edit_text"
-            android:fontFamily="@font/montserrat_regular"
-            android:inputType="textPersonName"
-            android:paddingStart="15dp"
-            android:paddingEnd="10dp"
-            android:text="@string/add_item"
+        <TextView
+            android:id="@+id/tv_medical_device1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="@string/title_form_detail1"
             android:textColor="@color/colorGreen"
-            android:textSize="14sp" />
+            android:textSize="24sp" />
 
-    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
+        <TextView
+            android:id="@+id/tv_medical_device2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_medical_device1"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="@string/title_form_detail2"
+            android:textColor="@color/colorGreen"
+            android:textSize="24sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/form_detail_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/montserrat_regular"
+                tools:text="Date"
+                android:textColor="@color/colorDarkGrey"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_medical_device2" />
+
+            <TextView
+                android:id="@+id/form_detail_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="12dp"
+                android:fontFamily="@font/montserrat_regular"
+                tools:text="Time"
+                android:textColor="@color/colorDarkGrey"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/form_detail_date"
+                app:layout_constraintTop_toBottomOf="@+id/tv_medical_device2" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/container_header_rent_item"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/container_header">
+
+        <TextView
+            android:id="@+id/tv_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="@string/item"
+            android:textColor="@color/colorDarkGrey"
+            android:textSize="20sp" />
+
+        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
+            android:id="@+id/neomorphFrameLayout3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            app:neomorph_background_color="@color/neomorph_background_color"
+            app:neomorph_corner_radius="12dp"
+            app:neomorph_elevation="6dp"
+            app:neomorph_highlight_color="@color/neomorph_highlight_color"
+            app:neomorph_shadow_color="@color/neomorph_shadow_color"
+            app:neomorph_shadow_type="outer"
+            app:neomorph_view_type="rectangular">
+
+            <Button
+                android:id="@+id/btn_add_item"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:background="@drawable/container_edit_text"
+                android:fontFamily="@font/montserrat_regular"
+                android:inputType="textPersonName"
+                android:paddingStart="15dp"
+                android:paddingEnd="10dp"
+                android:text="@string/add_item"
+                android:textColor="@color/colorGreen"
+                android:textSize="14sp" />
+
+        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
+
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_rental_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/layout_btn_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_item" />
-
+        app:layout_constraintTop_toBottomOf="@+id/container_header_rent_item" />
 
     <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
         android:id="@+id/layout_btn_signup"
@@ -288,7 +145,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:neomorph_background_color="@color/light"
-        app:neomorph_corner_radius="16dp"
+        app:neomorph_corner_radius="50dp"
         app:neomorph_elevation="6dp"
         app:neomorph_highlight_color="@color/neomorph_highlight_color"
         app:neomorph_layer_type="software"
@@ -300,7 +157,7 @@
             android:id="@+id/btn_next_book2"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@drawable/bg_button_green"
+            android:background="@drawable/bg_button_rounded_green"
             android:clickable="true"
             android:focusable="true"
             android:fontFamily="@font/montserrat_regular"
