--- a/app/src/main/res/layout/fragment_booking_4.xml
+++ b/app/src/main/res/layout/fragment_booking_4.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="@color/neomorph_background_color"
     tools:context=".Fragment.Booking3Fragment">
 
     <TextView
         android:id="@+id/tv_ritem"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
@@ -19,110 +19,101 @@
         android:textColor="@color/colorDarkGrey"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_rental_item4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/container_button_step_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_ritem" />
 
-    <TextView
-        android:id="@+id/tv_pitem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/step3"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_rental_item4"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_purchased_item4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pitem"
-        android:scrollbars="vertical"
-        android:layout_marginTop="16dp" />
-
-    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/layout_btn_back_booking"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container_button_step_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/neomorph_background_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/layout_btn_next_booking"
-        app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="16dp"
-        app:neomorph_elevation="6dp"
-        app:neomorph_highlight_color="@color/neomorph_highlight_color"
-        app:neomorph_layer_type="software"
-        app:neomorph_shadow_color="@color/neomorph_shadow_color"
-        app:neomorph_shadow_type="outer"
-        app:neomorph_view_type="rectangular">
-
-        <Button
-            android:id="@+id/btn_back_book4"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@drawable/bg_button_rounded_white"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/montserrat_regular"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:text="@string/back"
-            android:textAllCaps="false"
-            android:textColor="@color/colorGreen"
-            android:textSize="18sp" />
-
-    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
-
-    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/layout_btn_next_booking"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/neomorph_background_color"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/layout_btn_back_booking"
-        app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="16dp"
-        app:neomorph_elevation="6dp"
-        app:neomorph_highlight_color="@color/neomorph_highlight_color"
-        app:neomorph_layer_type="software"
-        app:neomorph_shadow_color="@color/neomorph_shadow_color"
-        app:neomorph_shadow_type="outer"
-        app:neomorph_view_type="rectangular">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/btn_next_book4"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@drawable/bg_button_rounded_green"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/montserrat_regular"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:text="@string/next"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
+            android:id="@+id/layout_btn_back_booking"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/neomorph_background_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/layout_btn_next_booking"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:neomorph_background_color="@color/neomorph_background_color"
+            app:neomorph_corner_radius="50dp"
+            app:neomorph_elevation="6dp"
+            app:neomorph_highlight_color="@color/neomorph_highlight_color"
+            app:neomorph_layer_type="software"
+            app:neomorph_shadow_color="@color/neomorph_shadow_color"
+            app:neomorph_shadow_type="outer"
+            app:neomorph_view_type="rectangular">
 
-    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
+            <Button
+                android:id="@+id/btn_back_book4"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:background="@drawable/bg_button_rounded_white"
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/montserrat_regular"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:text="@string/back"
+                android:textAllCaps="false"
+                android:textColor="@color/colorGreen"
+                android:textSize="18sp" />
+
+        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
+
+        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
+            android:id="@+id/layout_btn_next_booking"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/neomorph_background_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/layout_btn_back_booking"
+            app:layout_constraintTop_toTopOf="parent"
+            app:neomorph_background_color="@color/neomorph_background_color"
+            app:neomorph_corner_radius="50dp"
+            app:neomorph_elevation="6dp"
+            app:neomorph_highlight_color="@color/neomorph_highlight_color"
+            app:neomorph_layer_type="software"
+            app:neomorph_shadow_color="@color/neomorph_shadow_color"
+            app:neomorph_shadow_type="outer"
+            app:neomorph_view_type="rectangular">
+
+            <Button
+                android:id="@+id/btn_next_book4"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:background="@drawable/bg_button_rounded_green"
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/montserrat_regular"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:text="@string/next"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
