--- a/app/src/main/res/layout/item_list_booking.xml
+++ b/app/src/main/res/layout/item_list_booking.xml
@@ -44,34 +44,34 @@
                     android:text="@string/item"
                     android:textColor="@color/colorGreen"
                     android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tvDateStatus"
+                    android:id="@+id/tvAmountQty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/date"
+                    android:text="1"
                     android:textColor="@color/colorGrey"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvItemStatus"/>
 
                 <TextView
-                    android:id="@+id/tvTimeStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_marginStart="4dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/time"
+                    android:text="Pcs"
                     android:textColor="@color/colorGrey"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvDateStatus"
+                    app:layout_constraintStart_toEndOf="@+id/tvAmountQty"
                     app:layout_constraintTop_toBottomOf="@+id/tvItemStatus" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
