edit button circle green dan rounded green, circle white

--- a/app/src/main/res/layout/bottom_sheet_purchased_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_purchased_item.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:text="@string/add_item"
         android:textColor="@color/colorDarkGrey"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,17 +28,17 @@
         style="@style/TextAppearance.AppCompat.Headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="end"
         android:text="@string/clear"
         android:textColor="@color/colorGrey"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
         android:id="@+id/neomorphFrameLayout5"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
 
     <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
         android:id="@+id/neomorphFrameLayout4"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,14 +115,14 @@
     <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
         android:id="@+id/layout_btn_add_pItem"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@color/neomorph_background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neomorphFrameLayout4"
         app:neomorph_background_color="@color/neomorph_background_color"
-        app:neomorph_corner_radius="16dp"
+        app:neomorph_corner_radius="25dp"
         app:neomorph_elevation="6dp"
         app:neomorph_highlight_color="@color/neomorph_highlight_color"
         app:neomorph_layer_type="software"
@@ -134,7 +134,7 @@
             android:id="@+id/btn_add_purchased"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@drawable/bg_button_rounded_green"
+            android:background="@drawable/bg_button_circle_green"
             android:clickable="true"
             android:focusable="true"
             android:fontFamily="@font/montserrat_regular"
