--- a/app/src/main/res/layout/fragment_booking_2.xml
+++ b/app/src/main/res/layout/fragment_booking_2.xml
@@ -113,10 +113,10 @@
                 android:layout_height="50dp"
                 android:background="@drawable/container_edit_text"
                 android:fontFamily="@font/montserrat_regular"
-                android:inputType="textPersonName"
                 android:paddingStart="15dp"
                 android:paddingEnd="10dp"
                 android:text="@string/add_item"
+                android:textAllCaps="false"
                 android:textColor="@color/colorGreen"
                 android:textSize="14sp" />
 
@@ -145,7 +145,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:neomorph_background_color="@color/light"
-        app:neomorph_corner_radius="50dp"
+        app:neomorph_corner_radius="25dp"
         app:neomorph_elevation="6dp"
         app:neomorph_highlight_color="@color/neomorph_highlight_color"
         app:neomorph_layer_type="software"
@@ -157,7 +157,7 @@
             android:id="@+id/btn_next_book2"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@drawable/bg_button_rounded_green"
+            android:background="@drawable/bg_button_circle_green"
             android:clickable="true"
             android:focusable="true"
             android:fontFamily="@font/montserrat_regular"
