--- a/app/src/main/res/layout/bottom_sheet_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_item.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:text="@string/add_item"
         android:textColor="@color/colorDarkGrey"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +29,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:gravity="right"
+        android:gravity="end"
         android:text="@string/clear"
         android:textColor="@color/colorGrey"
         android:fontFamily="@font/montserrat_bold"
-        android:textSize="18dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -125,7 +125,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neomorphFrameLayout4"
         app:neomorph_background_color="@color/light"
-        app:neomorph_corner_radius="16dp"
+        app:neomorph_corner_radius="50dp"
         app:neomorph_elevation="6dp"
         app:neomorph_highlight_color="@color/neomorph_highlight_color"
         app:neomorph_layer_type="software"
