--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -79,7 +79,7 @@
         tools:ignore="MissingConstraints" />
 
     <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
-        android:id="@+id/neomorph_new_password_layout"
+        android:id="@+id/neomorph_old_password_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -88,6 +88,54 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:neomorph_background_color="@color/neomorph_background_color"
+        app:neomorph_corner_radius="25dp"
+        app:neomorph_elevation="6dp"
+        app:neomorph_highlight_color="@color/neomorph_highlight_color"
+        app:neomorph_shadow_color="@color/neomorph_shadow_color"
+        app:neomorph_shadow_type="outer"
+        app:neomorph_view_type="rectangular">
+
+
+        <EditText
+            android:id="@+id/et_change_old_password"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:autofillHints=""
+            android:background="@drawable/container_edit_text"
+            android:fontFamily="@font/montserrat_regular"
+            android:hint="@string/hint_old_password_change"
+            android:inputType="textPassword"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:textColor="@color/colorGreen"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/show_old_pass_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="8dp"
+            android:alpha=".5"
+            android:contentDescription="@string/todo"
+            android:onClick="ShowHidePass"
+            android:padding="5dp"
+            android:src="@drawable/ic_hide"
+            tools:ignore="OnClick" />
+
+    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
+
+    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
+        android:id="@+id/neomorph_new_password_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/neomorph_old_password_layout"
         app:neomorph_background_color="@color/neomorph_background_color"
         app:neomorph_corner_radius="25dp"
         app:neomorph_elevation="6dp"
