--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -42,7 +42,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="@string/app_bar_handover"
+                        android:text="@string/app_bar_confirmation"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:fontFamily="@font/montserrat_regular"
