--- a/app/src/main/res/layout-large/activity_sales_order.xml
+++ b/app/src/main/res/layout-large/activity_sales_order.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/neomorph_background_color"
     tools:context=".Activity.SalesOrderActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -91,7 +90,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:fontFamily="@font/montserrat_regular"
-                    tools:text="A-112"
+                    android:text="A-112"
                     android:textColor="@color/colorGrey"
                     android:textSize="16sp" />
 
@@ -127,7 +126,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/montserrat_regular"
-                    tools:text="29 July 2020"
+                    android:text="29 July 2020"
                     android:textColor="@color/colorGray"
                     android:textSize="16sp"
                     tools:ignore="MissingConstraints" />
@@ -163,7 +162,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/montserrat_regular"
-                    tools:text="RS. Omni Pulomas"
+                    android:text="RS. Omni Pulomas"
                     android:textColor="@color/colorGray"
                     android:textSize="16sp"
                     tools:ignore="MissingConstraints" />
@@ -199,13 +198,10 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/tv_select_patient"
+                    android:text="-Select-"
                     android:textColor="@color/colorGray"
                     android:textSize="16sp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    />
+                    tools:ignore="MissingConstraints" />
 
             </RelativeLayout>
 
@@ -238,7 +234,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/tv_empty"
+                    android:text="~"
                     android:textColor="@color/colorGray"
                     android:textSize="16sp"
                     tools:ignore="MissingConstraints" />
@@ -274,7 +270,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/tv_empty"
+                    android:text="~"
                     android:textColor="@color/colorGray"
                     android:textSize="16sp"
                     tools:ignore="MissingConstraints" />
@@ -504,7 +500,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="Rp 0"
+                    android:text="Rp. 5.830.000,00"
                     android:textColor="@color/colorGrey"
                     android:textSize="20sp" />
 
@@ -569,8 +565,8 @@
                         app:backgroundTint="@null"
                         android:clickable="true"
                         android:focusable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
                         android:fontFamily="@font/montserrat_regular"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:text="@string/btn_send_so"
                         android:textAllCaps="false"
                         android:textColor="@color/colorGreen"
