--- a/app/src/main/res/layout/activity_sales_order.xml
+++ b/app/src/main/res/layout/activity_sales_order.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/neomorph_background_color"
     tools:context=".Activity.SalesOrderActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -189,7 +188,7 @@
                     android:text="@string/patient_name_detail_sales"
                     android:textColor="@color/colorGray"
                     android:textSize="12sp"
-                    />
+                    tools:ignore="MissingConstraints" />
 
                 <TextView
                     android:id="@+id/tv_sales_order_patient_name"
@@ -198,13 +197,12 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
+                    android:clickable="true"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/tv_select_patient"
+                    android:text="-Select-"
                     android:textColor="@color/colorGray"
                     android:textSize="12sp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackground"/>
+                    tools:ignore="MissingConstraints" />
 
             </RelativeLayout>
 
@@ -237,7 +235,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/tv_empty"
+                    android:text="~"
                     android:textColor="@color/colorGray"
                     android:textSize="12sp"
                     tools:ignore="MissingConstraints" />
@@ -273,7 +271,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="@string/tv_empty"
+                    android:text="~"
                     android:textColor="@color/colorGray"
                     android:textSize="12sp"
                     tools:ignore="MissingConstraints" />
@@ -503,7 +501,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="Rp 0"
+                    android:text="Rp. 5.830.000,00"
                     android:textColor="@color/colorGrey"
                     android:textSize="20sp" />
 
@@ -568,8 +566,8 @@
                         app:backgroundTint="@null"
                         android:clickable="true"
                         android:focusable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
                         android:fontFamily="@font/montserrat_regular"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:text="@string/btn_send_so"
                         android:textAllCaps="false"
                         android:textColor="@color/colorGreen"
