--- a/app/src/main/res/layout/layout_bottom_sheet_payment_method.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_payment_method.xml
@@ -20,14 +20,14 @@
 
 
     <RadioGroup
-        android:id="@+id/radio_group"
+        android:id="@+id/rg_payment_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="20dp">
 
         <RadioButton
-            android:id="@+id/radio_cash"
+            android:id="@+id/rb_cash"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:text="@string/rd_cash"
@@ -41,7 +41,7 @@
             android:paddingEnd="18dp"/>
 
         <RadioButton
-            android:id="@+id/radio_credit"
+            android:id="@+id/rb_credit"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:text="@string/rd_credit"
